# RNE-Final-Project

./: README.md  yolo_align.py
rne_final_pkg/: package.xml  setup.cfg  setup.py
rne_final_pkg/config/: bridge_align.yaml  get_bear.yaml  goals.yaml  mission.yaml  scripted_mission.yaml
rne_final_pkg/rne_final_pkg/: arm_driver.py  bridge_align.py  bridge_avoid.py  car_driver.py  door_test.py  final_mapping_manager.py  final_mission.py  get_bear_node.py  nav_client.py  ramp_bear.py  ramp_bear_12.py  rectangle_mapping.py  scripted_final_mission.py  topic_check.py  wall_follow_mapping.py  yolo_align.py  yolo_client.py
